--- a/src/Page/WeatherApp.css
+++ b/src/Page/WeatherApp.css
@@ -7,18 +7,18 @@
 }
 .main:before{
     content:"";
-    background: url('../assets/sunset.jpg') no-repeat center;
+    background: url('../src/assets/sunset.jpg') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
     top:0;
     left:0;
     z-index:-1;
-    
+
 }
-h1{
-    font-size: 6rem;
-}
-p{
-    font-size: 1.6rem;
+.description{
+    position: relative;
+    right: -90%;
+    transform-origin: 0 0;
+    transform: rotate(270deg);
 }
