add search functionality

--- a/src/Page/WeatherApp.css
+++ b/src/Page/WeatherApp.css
@@ -22,3 +22,20 @@
     transform-origin: 0 0;
     transform: rotate(270deg);
 }
+ .search {
+    text-align: center;
+    padding: 1rem;
+  }
+  
+ input {
+    padding: .7rem 1.5rem;
+    font-size: 1.2rem;
+    border-radius: 25px;
+    border: 1px solid rgba(255,255,255, 0.8);
+    background: rgba(255,255,255, 0.1);
+    color: #f8f8f8;
+  }
+  
+  ::placeholder {
+    color: #f8f8f8;
+  }
